--- a/includes/css/styles.css
+++ b/includes/css/styles.css
@@ -35,6 +35,11 @@ Notes:
       padding:20px;
    }
 
+   .unstyled{
+      list-style: none;
+      padding:0;
+   }
+
 /* --------------------------------------
    Typography
    -------------------------------------- */
